After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694874 - Printers panel crashes after change of option
Printers panel crashes after change of option
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-28 15:19 UTC by Marek Kašík
Modified: 2013-03-04 11:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
don't crash after changing an option (7.07 KB, patch)
2013-02-28 15:21 UTC, Marek Kašík
committed Details | Review

Description Marek Kašík 2013-02-28 15:19:01 UTC
Printers panel crashes after setting a new value for an option in Options dialog and closing of this dialog. This is caused by calling of callback of printer_add_option_async() with PpPPDOptionWidget widget as user_data which is already finalized. The same applies for PpIPPOptionWidget.
It crashes on 3.7.x. The same code is in 3.6.x but I can not get it to crash.

Proper creation and checking of a GCancellable object fixes this.
Comment 1 Marek Kašík 2013-02-28 15:21:13 UTC
Created attachment 237612 [details] [review]
don't crash after changing an option

This patch adds GCancellable and its handling to prevent the Options dialog from crash.
Comment 2 Matthias Clasen 2013-03-03 03:31:15 UTC
Review of attachment 237612 [details] [review]:

Looks good to me
Comment 3 Marek Kašík 2013-03-04 11:07:27 UTC
Comment on attachment 237612 [details] [review]
don't crash after changing an option

Thank you for the review. I've pushed it to 3.8 and master.