printers: Don't crash after changing an option

Use GCancellable when setting a new value of an option.
This prevents Printers panel from crash caused by
calling of option widget's callback on finalized widget.

https://bugzilla.gnome.org/show_bug.cgi?id=694874