panels/printers/pp-ipp-option-widget.c
@@ -52,6 +52,8 @@ struct PpIPPOptionWidgetPrivate
   gchar *option_name;
 
   GHashTable *ipp_attribute;
+
+  GCancellable *cancellable;
 };
 
 G_DEFINE_TYPE (PpIPPOptionWidget, pp_ipp_option_widget, GTK_TYPE_HBOX)
@@ -162,6 +164,12 @@ pp_ipp_option_widget_finalize (GObject *object)
         {
           g_hash_table_unref (priv->ipp_attribute);
           priv->ipp_attribute = NULL;
+        }
+
+      if (priv->cancellable)
+        {
+          g_cancellable_cancel (priv->cancellable);
+          g_object_unref (priv->cancellable);
         }
     }
 
@@ -308,7 +316,11 @@ static void
 printer_add_option_async_cb (gboolean success,
                              gpointer user_data)
 {
+  PpIPPOptionWidget        *widget = (PpIPPOptionWidget *) user_data;
+  PpIPPOptionWidgetPrivate *priv = widget->priv;
+
   update_widget (user_data);
+  g_clear_object (&priv->cancellable);
 }
 
 static void
@@ -326,11 +338,18 @@ switch_changed_cb (GtkWidget         *switch_button,
   else
     values[0] = g_strdup ("False");
 
+  if (priv->cancellable)
+    {
+      g_cancellable_cancel (priv->cancellable);
+      g_object_unref (priv->cancellable);
+    }
+
+  priv->cancellable = g_cancellable_new ();
   printer_add_option_async (priv->printer_name,
                             priv->option_name,
                             values,
                             TRUE,
-                            NULL,
+                            priv->cancellable,
                             printer_add_option_async_cb,
                             widget);
 
@@ -347,11 +366,18 @@ combo_changed_cb (GtkWidget         *combo,
   values = g_new0 (gchar *, 2);
   values[0] = combo_box_get (combo);
 
+  if (priv->cancellable)
+    {
+      g_cancellable_cancel (priv->cancellable);
+      g_object_unref (priv->cancellable);
+    }
+
+  priv->cancellable = g_cancellable_new ();
   printer_add_option_async (priv->printer_name,
                             priv->option_name,
                             values,
                             TRUE,
-                            NULL,
+                            priv->cancellable,
                             printer_add_option_async_cb,
                             widget);
 
@@ -368,11 +394,18 @@ spin_button_changed_cb (GtkWidget         *spin_button,
   values = g_new0 (gchar *, 2);
   values[0] = g_strdup_printf ("%d", gtk_spin_button_get_value_as_int (GTK_SPIN_BUTTON (spin_button)));
 
+  if (priv->cancellable)
+    {
+      g_cancellable_cancel (priv->cancellable);
+      g_object_unref (priv->cancellable);
+    }
+
+  priv->cancellable = g_cancellable_new ();
   printer_add_option_async (priv->printer_name,
                             priv->option_name,
                             values,
                             TRUE,
-                            NULL,
+                            priv->cancellable,
                             printer_add_option_async_cb,
                             widget);
 
